--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     "dependencies": {
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
-        "@types/jest": "^26.0.15",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.53",
-        "@types/react-dom": "^16.9.8",
+        "@testing-library/jest-dom": "^5.11.6",
+        "@testing-library/react": "^11.2.2",
+        "@testing-library/user-event": "^12.5.0",
+        "@types/jest": "^26.0.16",
+        "@types/lodash": "^4.14.165",
+        "@types/node": "^14.14.10",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "axios": "^0.21.0",
+        "lodash": "^4.17.20",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-use": "^15.3.4",
-        "typescript": "^4.0.3",
-        "web-vitals": "^0.2.4"
+        "typescript": "^4.1.2",
+        "web-vitals": "^1.0.1"
     },
     "eslintConfig": {
         "extends": [
